Fixed spacing

--- a/styles/app.css
+++ b/styles/app.css
@@ -18,7 +18,7 @@ body {
 }
 
 .topbar {
-  z-index: 999999 !important;
+  z-index: 99999 !important;
 }
 
 .custom-hero {
@@ -112,7 +112,7 @@ body {
   position: fixed;
   bottom: 2%;
   right: 1%;
-  z-index: 10;
+  z-index: 999999;
 }
 
 .dark-mode .dark-mode {
